# flirtlib-release

./: CMakeLists.txt  bloom.conf  debian.store  flirtlib.pc.in  patches.conf  stack.xml
debian/: changelog  control  copyright  gbp.conf  rules
feature/: AbstractFeatureSetMatcher.h  BetaGrid.h  CMakeLists.txt  CurvatureDetector.cpp  CurvatureDetector.h  Detector.h  InterestPoint.h  MultiScaleDetector.h  NormalBlobDetector.h  NormalDetector.h  NormalEdgeDetector.h  RangeDetector.cpp  RangeDetector.h  RansacFeatureSetMatcher.h  RansacLoopClosureDrawMovie.cpp  RansacLoopClosureTest.cpp  RansacMultiFeatureSetMatcher.h  ShapeContext.h
geometry/: CMakeLists.txt
gui/: AbstractRenderer.h  BetaGridPresenter.h  BoxParameterWidget.h  CorrespondenceRenderer.h  DescriptorChooserPresenter.h  DescriptorPresenter.h  DetectorPresenter.h  FLIRTDemo.h  FeatureSetMatcherPresenter.h  InterestPointRenderer.h  LaserReadingRenderer.h  MultiScaleCurvatureDetectorPresenter.h  MultiScaleDetectorPresenter.h  MultiScaleNormalDetectorPresenter.h  PeakFinderPresenter.h  PolarGridGraphicsItem.cpp  PolarGridRenderer.h  RansacPresenter.h  RendererWidget.cpp  RendererWidget.h  SensorStreamWidget.h  ShapeContextPresenter.h  SimplePeakFinderPresenter.h  TabbedParameterWidget.h
sensors/: CMakeLists.txt  LaserReading.h
sensorstream/: CMakeLists.txt  CarmenLog.h  LogReader.h  LogSensorStream.h  LogWriter.h  SensorStream.h
utils/: CMakeLists.txt  Convolution.h  HistogramDistances.h  PoseEstimation.h  Regression.h  SimpleMinMaxPeakFinder.h  SimplePeakFinder.h
